--- a/App2/.AL-Go/settings.json
+++ b/App2/.AL-Go/settings.json
@@ -1,13 +1,16 @@
-{
+﻿{
     "country":  "base",
     "appFolders":  [
-    ],
+
+                   ],
     "testFolders":  [
-    ],
+
+                    ],
     "appDependencyProbingPaths":  [
-        {
-            "repo":  "https://github.com/businesscentralapps/contoso-common",
-            "release_status":  "latestBuild"
-        }
-    ]
+                                      {
+                                          "repo":  "https://github.com/businesscentralapps/contoso-common",
+                                          "release_status":  "latestBuild"
+                                      }
+                                  ],
+    "RepoVersion":  "1.1"
 }
