--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,6 +1,6 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/freddydk/AL-Go@bcptreport",
+  "templateUrl": "https://github.com/freddydk/AL-Go@nuget",
   "runs-on": "bc-build",
   "BcContainerHelperVersion": "preview",
   "GenerateDependencyArtifact": true,
@@ -10,5 +10,5 @@
   "DeployToQA": {
     "Projects": "App2"
   },
-  "templateSha": "10f98f2810aebb6f5ca54180a2d794ee24d7f15f"
+  "templateSha": "679d5cf17e51b1cd558453f429df6e59bf2ce95c"
 }
