--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,8 +1,6 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/freddydk/AL-Go@nuget",
-  "runs-on": "bc-build",
-  "BcContainerHelperVersion": "preview",
+  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@preview",
   "GenerateDependencyArtifact": true,
   "environments": [
     "QA"
