--- a/App2/.AL-Go/settings.json
+++ b/App2/.AL-Go/settings.json
@@ -9,7 +9,8 @@
     "appDependencyProbingPaths":  [
                                       {
                                           "repo":  "https://github.com/businesscentralapps/contoso-common",
-                                          "release_status":  "latestBuild"
+                                          "release_status":  "latestBuild",
+                                          "AuthTokenSecret": "NewToken"
                                       }
                                   ],
     "RepoVersion":  "1.1"
