--- a/App2.it/.AL-Go/settings.json
+++ b/App2.it/.AL-Go/settings.json
@@ -14,7 +14,8 @@
                                       },
                                       {
                                           "repo":  "https://github.com/businesscentralapps/contoso-common",
-                                          "release_status":  "latestBuild"
+                                          "release_status":  "latestBuild",
+                                          "AuthTokenSecret": "NewToken"
                                       }
                                   ],
     "RepoVersion":  "2.1"
