--- a/App2.it/.AL-Go/settings.json
+++ b/App2.it/.AL-Go/settings.json
@@ -9,7 +9,7 @@
     "appDependencyProbingPaths":  [
                                       {
                                           "repo":  "https://github.com/businesscentralapps/contoso-app2",
-                                          "release_status":  "latestBuild",
+                                          "release_status":  "include",
                                           "projects":  "App2"
                                       },
                                       {
