--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -2,5 +2,6 @@
   "type": "PTE",
   "templateUrl": "https://github.com/freddydk/AL-Go@noPAT",
   "GenerateDependencyArtifact": true,
-  "templateSha": "6013b81e02b135e4ebb941589649168eb7c4a7a2"
+  "templateSha": "6013b81e02b135e4ebb941589649168eb7c4a7a2",
+  "SkipUpgrade": true
 }
